# AI_Art

./: .gitignore  CMakeLists.txt  LICENSE  README.md  api.txt.example  requirements.txt  启动.bat
cpp/include/: agent_panel.hpp  backend_ipc.hpp  file_dialog.hpp  gallery_screen.hpp  generate_screen.hpp  json_util.hpp  train_screen.hpp
cpp/src/: agent_panel.cpp  backend_ipc.cpp  gallery_screen.cpp  generate_screen.cpp  main.cpp  train_screen.cpp
python/: server.py
